--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Making your first Phaser 3 Game - Part 1</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <script src="game.js"></script>
+    <script src="style.css"></script>
     <style type="text/css">
         body {
             margin: 0;
